# welcome-packet-problem-3

./: .code-workspace.code-workspace
.github/workflows/: dbt-image-build-push.yaml  executor-cloud-run-deploy.yaml
dbt/: .dockerignore  Dockerfile  dbt.sh  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
dbt/models/fulfillment__mailchimp/: fulfillment__mailchimp__emails.sql  fulfillment__mailchimp__emails.yaml
dbt/models/landing__mailchimp/: source.yaml
dbt/models/staging__mailchimp/: staging__mailchimp__emails.sql  staging__mailchimp__emails.yaml
executor/: .env.sample  Dockerfile  bigquery.py  config.py  docker-compose.yml  job.py  logger.py  pyproject.toml  server.py
executor/job/: job.py  job_test.py
executor/mailchimp/: mailchimp.py  mailchimp_test.py
executor/pipeline/: pipeline.py  pipeline_test.py
terraform/: .gitignore  api.tf  artifact_registry.tf  bigquery.tf  cloud_run.tf  cloud_scheduler.tf  iam.tf  main.tf  secret_manager.tf
